--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#667eea",
-  "theme_color": "#764ba2",
+  "theme_color": "#667eea",
   "orientation": "portrait",
   "icons": [
     {
